--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <version>3.0.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
