--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>co.ke.inmbank</groupId>
     <artifactId>funhub</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>funhub</name>
     <description>funhub</description>
     <url/>
